# nfl_prediction

./: .gitignore  README.md  environment.yml  pyproject.toml
src/nfl_prediction/: crew.py  main.py
src/nfl_prediction/config/: agents.yaml  tasks.yaml
